# penv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
files/: bash-env.j2  bash-hook.j2  zsh-env.j2  zsh-hook.j2  zsh-pclientdwrapper.j2  zsh-pcliwrapper.j2  zsh-pdwrapper.j2
src/: command.rs  lib.rs  main.rs  opt.rs
src/command/: cache.rs  env.rs  hook.rs  install.rs  list.rs  manage.rs  use_.rs  which.rs
src/penv/: mod.rs  penv.rs
src/penv/cache/: cache.rs
src/penv/downloader/: downloader.rs  git.rs  mod.rs
src/penv/environment/binary/: mod.rs  pcli.rs  pclientd.rs  pd.rs
src/penv/environment/environment/: mod.rs
src/penv/environment/environment/binary/: environment.rs
src/penv/environment/environment/checkout/: environment.rs
src/penv/release/: release.rs  version.rs
src/penv/release/release/: binary.rs  git_repo.rs
src/pvm/: mod.rs  pvm.rs
src/pvm/cache/: cache.rs
src/pvm/downloader/: downloader.rs  git.rs  mod.rs
src/pvm/environment/: environment.rs  mod.rs
src/pvm/environment/binary/: mod.rs  pcli.rs  pclientd.rs  pd.rs
src/pvm/environment/environment/: mod.rs
src/pvm/environment/environment/binary/: environment.rs
src/pvm/environment/environment/checkout/: environment.rs
src/pvm/release/: asset.rs  mod.rs  release.rs  version.rs
src/pvm/release/release/: binary.rs  git_repo.rs
tests/: cli_integration.rs
